--- a/src/main/resources/templates/calendar/index.html
+++ b/src/main/resources/templates/calendar/index.html
@@ -20,10 +20,14 @@
 	<script th:src='@{/js/main.js}'></script>
 	<script th:src='@{/js/diary.js}'></script>
 
-</head>
-<body>
+	<script th:inline="javascript">
+		var msg = [[${msg}]];
+		if (msg != null) alert(msg);
+	</script>
 
-<!--<input type="hidden" name="checkLogin" value="<?=$_SESSION["seq"]?>">-->
+</head>
+
+<body>
 
 <div id='wrap'>
 
@@ -39,11 +43,8 @@
 			<label for='drop-remove'>remove after drop</label>
 		</p>
 		<div style="text-align:center; margin:30px 0 10px 0">
-			<? if (!$_SESSION["seq"]) { ?>
-			<button type="button" class="btn btn-success" style="width:100%;" data-toggle="modal" data-target="#loginModal">Login / Register</button>
-			<? } else { ?>
-			<button type="button" class="btn btn-danger" style="width:100%;" onclick="userLogout();">Logout</button>
-			<? } ?>
+			<button th:if="${#strings.isEmpty(loginUser)}" type="button" class="btn btn-success" style="width:100%;" data-toggle="modal" data-target="#loginModal">Login / Register</button>
+			<button th:if="${loginUser}" type="button" class="btn btn-danger" style="width:100%;" onclick="userLogout();">Logout</button>
 		</div>
 	</div>
 
