로그아웃 메시지 추가 로그인 체크 기능 변경

--- a/src/main/resources/templates/calendar/index.html
+++ b/src/main/resources/templates/calendar/index.html
@@ -29,6 +29,8 @@
 
 <body>
 
+<input type="hidden" name="checkLogin" th:value="${loginUser?.memberid}" />
+
 <div id='wrap'>
 
 	<div id='external-events'>
