일정 삭제 기능 추가 삭제여부 컬럼명 변경

--- a/src/main/resources/templates/calendar/index.html
+++ b/src/main/resources/templates/calendar/index.html
@@ -72,6 +72,8 @@
 			<div id="modalBody" class="modal-body">
 				<div>
 					<input type="hidden" name="eventId" />
+					<input type="hidden" name="eventStart" />
+					<input type="hidden" name="eventEnd" />
 					<input type="text" id="titleValue" name="titleValue" style="width:90%" onkeypress="if (event.keyCode == 13) putTitleUpdate();" />
 				</div><br />
 				<div style="width:90%; text-align:left; padding-left:30px;">
