필터와 인터셉터 호출 시점 주석 추가 유저 등록 화이트리스트 추가 테스트 계정 자동 세팅

--- a/src/main/resources/templates/calendar/index.html
+++ b/src/main/resources/templates/calendar/index.html
@@ -103,10 +103,10 @@
 			<form method="POST" name="loginForm">
 				<div id="modalBody" class="modal-body">
 					<div>
-						<input type="text" class="form-control" name="memberid" placeholder="Username" required autofocus />
+						<input type="text" class="form-control" name="memberid" placeholder="Username" value="test" required autofocus />
 					</div>
 					<div>
-						<input type="password" class="form-control" name="memberpw" placeholder="Password" onkeypress="if (event.keyCode == 13) submitLogin();" required>
+						<input type="password" class="form-control" name="memberpw" placeholder="Password" value="test" onkeypress="if (event.keyCode == 13) submitLogin();" required>
 					</div>
 				</div>
 				<div class="modal-footer">
