--- a/src/main/resources/templates/calendar/index.html
+++ b/src/main/resources/templates/calendar/index.html
@@ -36,17 +36,17 @@
 	<div id='external-events'>
 		<h4 style="font-weight:bold;">일정 <a href="javascript:alert('일정을 드래그 앤 드롭하여 달력에 놓으면 추가됩니다.');">추가</a>&<a href="javascript:alert('일정을 드래그 앤 드롭하여 이곳에 가져오면 삭제됩니다.');">삭제</a></h4>
 		<div class="fc-event-group">
-			<div class='fc-event' bg_color="#3a87ad" text_color="white" style="background-color:#3a87ad; color:white;">My Event</div>
-			<div class='fc-event' bg_color="black" text_color="white" style="background-color:black; color:white;">My Event</div>
-			<div class='fc-event' bg_color="red" text_color="white" style="background-color:red; color:white;">My Event</div>
+			<div class='fc-event' th:text="#{calendar.event.name}" bg_color="#3a87ad" text_color="white" style="background-color:#3a87ad; color:white;"></div>
+			<div class='fc-event' th:text="#{calendar.event.name}" bg_color="black" text_color="white" style="background-color:black; color:white;"></div>
+			<div class='fc-event' th:text="#{calendar.event.name}" bg_color="red" text_color="white" style="background-color:red; color:white;"></div>
 		</div>
 		<p style="display:none">
 			<input type='checkbox' id='drop-remove' checked='checked' />
 			<label for='drop-remove'>remove after drop</label>
 		</p>
 		<div style="text-align:center; margin:30px 0 10px 0">
-			<button th:if="${#strings.isEmpty(loginUser)}" type="button" class="btn btn-success" style="width:100%;" data-toggle="modal" data-target="#loginModal">Login / Register</button>
-			<button th:if="${loginUser}" type="button" class="btn btn-danger" style="width:100%;" onclick="userLogout();">Logout</button>
+			<button th:if="${#strings.isEmpty(loginUser)}" type="button" class="btn btn-success" style="width:100%;" data-toggle="modal" data-target="#loginModal" th:text="#{user.login.register}"></button>
+			<button th:if="${loginUser}" type="button" class="btn btn-danger" style="width:100%;" onclick="userLogout();" th:text="#{user.logout}"></button>
 		</div>
 	</div>
 
@@ -66,8 +66,8 @@
 	<div class="modal-dialog">
 		<div class="modal-content">
 			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span> <span class="sr-only">close</span></button>
-				<h4 id="modalTitle" class="modal-title">일정 수정하기</h4>
+				<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span> <span class="sr-only" th:text="#{calendar.modify.close}"></span></button>
+				<h4 id="modalTitle" class="modal-title" th:text="#{calendar.modify.info}"></h4>
 			</div>
 			<div id="modalBody" class="modal-body">
 				<div>
@@ -77,17 +77,17 @@
 					<input type="text" id="titleValue" name="titleValue" style="width:90%" onkeypress="if (event.keyCode == 13) putTitleUpdate();" />
 				</div><br />
 				<div style="width:90%; text-align:left; padding-left:30px;">
-					<span style="font-weight:bold;">Color</span>
+					<span style="font-weight:bold;" th:text="#{calendar.bg.color.main}"></span>
 					<select class="colorSelect" name="colorSelect">
-						<option value="default">default</option>
-						<option value="black">black</option>
-						<option value="red">red</option>
+						<option value="default" th:text="#{calendar.bg.color.default}"></option>
+						<option value="black" th:text="#{calendar.bg.color.black}"></option>
+						<option value="red" th:text="#{calendar.bg.color.red}"></option>
 					</select>
 				</div>
 			</div>
 			<div class="modal-footer">
-				<button class="btn btn-primary" onclick="javascript:putTitleUpdate()">수정</button>
-				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+				<button class="btn btn-primary" onclick="javascript:putTitleUpdate()" th:text="#{calendar.modify.button}"></button>
+				<button type="button" class="btn btn-default" data-dismiss="modal" th:text="#{calendar.modify.close}"></button>
 			</div>
 		</div>
 	</div>
@@ -97,8 +97,8 @@
 	<div class="modal-dialog" style="width:300px;">
 		<div class="modal-content">
 			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span> <span class="sr-only">close</span></button>
-				<h4 id="modalTitle" class="modal-title"><div class="panel-title">Login / Register</div></h4>
+				<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span> <span class="sr-only" th:text="#{calendar.modify.close}"></span></button>
+				<h4 id="modalTitle" class="modal-title"><div class="panel-title" th:text="#{user.login.register}"></div></h4>
 			</div>
 			<form method="POST" name="loginForm">
 				<div id="modalBody" class="modal-body">
@@ -111,13 +111,13 @@
 				</div>
 				<div class="modal-footer">
 					<div>
-						<button type="button" class="form-control btn btn-info" onclick="javascript:submitLogin();">Login</button>
+						<button type="button" class="form-control btn btn-info" onclick="javascript:submitLogin();" th:text="#{user.login}"></button>
 					</div>
 					<div style="margin-top:5px">
-						<button type="button" class="form-control btn btn-success" onclick="javascript:submitRegister();">Register</button>
+						<button type="button" class="form-control btn btn-success" onclick="javascript:submitRegister();" th:text="#{user.register}"></button>
 					</div>
 					<div style="margin-top:5px">
-						<button type="button" class="form-control btn btn-warning" onclick="javascript:loginTestUser();">Use test account</button>
+						<button type="button" class="form-control btn btn-warning" onclick="javascript:loginTestUser();" th:text="#{user.use.test.account}"></button>
 					</div>
 				</div>
 			</form>
