--- a/src/main/resources/templates/calendar/index.html
+++ b/src/main/resources/templates/calendar/index.html
@@ -31,6 +31,7 @@
 </head>
 
 <body>
+<!-- swagger url : /swagger-ui.html -->
 
 <input type="hidden" name="checkLogin" th:value="${loginUser?.memberid}" />
 
